gitea/installs/default/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitea.lanjian.io`)
      priority: 10
      services:
        - name: gitea-http
          port: 3000
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  labels:
    traffic-type: internal
spec:
  entryPoints:
    - gitea-ssh
  routes:
  - match: HostSNI(`*`)
    services:
    - name: gitea-ssh
      port: 2222
